fix: update spec, add sso login
