# packages/server/src/auth/index.ts
@@ -1,9 +1,9 @@
 import { RestModels } from '@theniledev/js';
-import isObject from 'lodash/isObject';
 
 import { Config } from '../utils/Config';
 import Requester, { NileRequest, NileResponse } from '../utils/Requester';
 import { ResponseError } from '../utils/ResponseError';
+import { X_NILE_TENANT } from '../utils/fetch';
 
 export default class Auth extends Config {
   constructor(config: Config) {
@@ -19,10 +19,53 @@ export default class Auth extends Config {
     req: NileRequest<RestModels.CreateBasicUserRequest>,
     init?: RequestInit
   ): NileResponse<RestModels.LoginUserResponse> => {
-    const headers =
-      req instanceof Request ? new Headers(req.headers) : new Headers();
+    const headers = new Headers({ 'content-type': 'application/json' });
     const _requester = new Requester(this);
-    const res = await _requester.post(req, this.loginUrl, init);
+
+    const params =
+      req instanceof Request
+        ? new URL(req.url).searchParams
+        : new URLSearchParams();
+
+    const sso = params.get('sso');
+
+    if (sso) {
+      const providerRes = await this.getProviders(
+        (req as Request).clone(),
+        init
+      );
+      // if you have a provider, log them in
+      if (
+        providerRes &&
+        providerRes.status >= 200 &&
+        providerRes.status < 300
+      ) {
+        const providers = await new Response(providerRes.body).json();
+        if (providers.length > 0) {
+          if (providers.length > 1) {
+            return new Response(JSON.stringify(providers), { status: 200 });
+            // someone has to do somethig about this
+          }
+
+          // is there a way to do this? probably not.
+          headers.set(X_NILE_TENANT, providers[0].tenantId);
+          const ssoResp = await new Response(
+            (
+              await this.loginSSO(req)
+            ).body
+          ).json();
+          const redirectUrl = ssoResp.uri;
+          return Response.redirect(redirectUrl, 302);
+          // if there is no provider, require a password.
+        }
+      }
+    }
+
+    const res = await _requester.post(req, this.loginUrl, init).catch((e) => {
+      // eslint-disable-next-line no-console
+      console.error(e);
+      return e;
+    });
     if (res instanceof ResponseError) {
       return res.response;
     }
@@ -31,10 +74,33 @@ export default class Auth extends Config {
       const token: RestModels.LoginUserResponse = await res.json();
       const cookie = `${this.api?.cookieKey}=${token.token.jwt}; path=/; samesite=lax; httponly;`;
       headers.set('set-cookie', cookie);
+      const hasTenantId = headers.get(X_NILE_TENANT);
+      if (!hasTenantId) {
+        const { tenants } = token;
+        const tenant = tenants?.values();
+        const tenantId = tenant?.next().value;
+        headers.set(X_NILE_TENANT, tenantId);
+      }
       return new Response(JSON.stringify(token), { status: 200, headers });
     }
     const text = await res.text();
     return new Response(text, { status: res.status });
+  };
+
+  loginSSOUrl = (provider: string) => {
+    return `/workspaces/${encodeURIComponent(
+      this.workspace
+    )}/databases/${encodeURIComponent(this.database)}/tenants/${
+      this.tenantId ?? '{tenantId}'
+    }/auth/oidc/${provider}/login`;
+  };
+
+  loginSSO = async (
+    req: NileRequest<RestModels.CreateBasicUserRequest>,
+    init?: RequestInit
+  ) => {
+    const _requester = new Requester(this);
+    return _requester.get(req, this.loginSSOUrl('okta'), init);
   };
 
   get signUpUrl() {
@@ -51,7 +117,7 @@ export default class Auth extends Config {
     return _requester.post(req, this.signUpUrl, init);
   };
 
-  providerUrl(providerName: string) {
+  updateProviderUrl(providerName: string) {
     return `/workspaces/${encodeURIComponent(
       this.workspace
     )}/databases/${encodeURIComponent(this.database)}/tenants/${
@@ -65,18 +131,28 @@ export default class Auth extends Config {
   ): NileResponse<RestModels.TenantSSORegistration> => {
     const _requester = new Requester(this);
     const providerName = 'okta';
-    return _requester.put(req, this.providerUrl(providerName), init);
+    return _requester.put(req, this.updateProviderUrl(providerName), init);
   };
 
-  getProvider = async (
-    req: NileRequest<void | string>,
+  providerUrl(email?: undefined | string) {
+    return `/workspaces/${encodeURIComponent(
+      this.workspace
+    )}/databases/${encodeURIComponent(
+      this.database
+    )}/tenants/auth/oidc/providers${
+      email ? `?email=${encodeURIComponent(email)}` : ''
+    }`;
+  }
+  getProviders = async (
+    req: NileRequest<void | RestModels.CreateBasicUserRequest>,
     init?: RequestInit
   ): NileResponse<RestModels.TenantSSORegistration> => {
     const _requester = new Requester(this);
-    let providerName = isObject(req) ? req.url.split('/').reverse() : '';
-    if (typeof req === 'string') {
-      providerName = [req];
+    let body: { email: string } | undefined;
+    // this is a get. Get the email from the response body so the request is filtered.
+    if (req && 'body' in req) {
+      body = await new Response(req.body as BodyInit).json();
     }
-    return _requester.get(req, this.providerUrl(providerName[0]), init);
+    return _requester.get(req, this.providerUrl(body?.email), init);
   };
 }
